# sales_force_assigment

./: .gitignore  BACKEND_API_REQUIREMENTS.md  Makefile  RALPH_MCP.md  README.md  docker-compose.mlops.yml  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  celerybeat-schedule  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20240101_000000_initial_schema.py  20240102_000001_rename_metadata_column.py  20240103_000002_add_geo_experiments.py  20240104_000003_fix_geo_experiment_enum.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/graphql/: __init__.py  context.py  permissions.py  schema.py
backend/app/api/graphql/mutations/: __init__.py  api_key_mutations.py  attribution_mutations.py  auth_mutations.py  branding_mutations.py  channel_mutations.py  connector_mutations.py  consent_mutations.py  dashboard_mutations.py  dataset_mutations.py  (+15 more)
backend/app/api/rest/: __init__.py  health.py  mlops.py  upload.py
backend/app/core/: exceptions.py  observability.py
backend/app/core/security/: __init__.py  jwt.py  oauth.py  password.py  rbac.py  row_level.py  saml.py
backend/app/domain/: __init__.py  entities.py  events.py  value_objects.py
backend/app/infrastructure/: __init__.py
backend/app/infrastructure/cache/: redis.py
backend/app/infrastructure/cleanroom/: __init__.py  clean_room.py  providers.py
backend/app/infrastructure/connectors/: __init__.py  bigquery.py  databricks.py  google_ads.py  google_analytics.py  hubspot.py  meta_ads.py  redshift.py  salesforce.py  snowflake.py
backend/app/infrastructure/database/: session.py
backend/app/infrastructure/storage/: __init__.py  s3.py
backend/app/mcp/: __init__.py  config.py  server.py
backend/app/mcp/core/: __init__.py  auth.py  exceptions.py  middleware.py  schemas.py  transport.py
backend/app/mcp/formatters/: __init__.py  insight_formatter.py  narrative_generator.py
backend/app/mcp/prompts/: __init__.py  workflow_prompts.py
backend/app/mcp/resources/: __init__.py  base.py  data_resources.py  model_resources.py
backend/app/mcp/tests/: __init__.py  conftest.py  test_auth.py  test_integration.py  test_resources.py  test_tools.py
backend/app/mcp/tools/: __init__.py  base.py  data_tools.py  model_tools.py  optimization_tools.py
backend/app/ml/: __init__.py
backend/app/ml/attribution/: __init__.py  markov.py  mta.py  shapley.py
backend/app/ml/automl/: __init__.py  hyperopt_tuner.py  model_selector.py
backend/app/ml/causal/: __init__.py  dag_discovery.py  experiment_design.py  geo_lift.py  notears.py  synthetic_control.py
backend/app/ml/creative/: __init__.py  fatigue_model.py  refresh_optimizer.py
backend/app/ml/evaluation/: __init__.py  benchmarks.py  metrics.py  validator.py
backend/app/ml/explainability/: __init__.py  lime_explainer.py  shap_explainer.py
backend/app/ml/layers/: __init__.py
backend/app/ml/models/: __init__.py  arima_forecast.py  custom_mmm.py  deepar_forecast.py  ensemble_forecast.py  nbeats_forecast.py  neural_mmm.py  prophet_forecast.py  pymc_mmm.py  tft_forecast.py
backend/app/ml/online/: __init__.py  drift_detector.py  incremental_trainer.py
backend/app/ml/optimization/: __init__.py  multi_period.py  optimizer.py  roi_analysis.py
backend/app/ml/pipelines/: __init__.py  inference_pipeline.py  training_pipeline.py
backend/app/ml/simulation/: __init__.py  monte_carlo.py
backend/app/ml/transformers/: __init__.py  adstock.py  saturation.py  seasonality.py
backend/app/ml/uncertainty/: __init__.py  calibration.py  conformal.py
backend/app/ml/unified/: __init__.py  measurement_framework.py  reconciliation.py
backend/app/services/compliance/: __init__.py  consent_manager.py  data_retention.py
backend/app/services/data/: __init__.py  data_cleaning.py  data_quality.py  data_service.py  data_validator.py  feature_selection.py  schema_inference.py
backend/app/services/etl/: __init__.py  pipeline.py  transformers.py
backend/app/services/export/: __init__.py  export_service.py
backend/app/services/forecast/: __init__.py  forecast_service.py
backend/app/services/model_registry/: __init__.py  registry.py
backend/app/services/monitoring/: __init__.py  model_monitor.py
backend/app/services/privacy/: __init__.py  differential_privacy.py
backend/app/services/scheduler/: __init__.py  scheduler.py
backend/app/services/streaming/: __init__.py  event_processor.py
backend/app/workers/: celery_app.py
backend/app/workers/tasks/: forecasting.py  optimization.py  reports.py  training.py
backend/scripts/: seed_admin.py
backend/tests/: conftest.py  test_auth.py  test_health.py  test_optimization.py  test_transformers.py
backend/tests/fixtures/: __init__.py
backend/tests/ml/: __init__.py  test_causal_attribution.py  test_neural_forecasting.py
(+281 files in other folders)
